<resources>
    <string name="app_name">Class Tracking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_room">Room</string>
    <string name="menu_achieve">Achieve</string>
    <string name="menu_profile">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="email_example">email@example.com</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_passwords">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_option">______________ Or sign in with ______________</string>
    <string name="submit">Submit</string>
    <string name="new_password">New password</string>
    <string name="search">Search</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="create_new_room">Create New Room</string>
    <string name="room_code">Room Code</string>
    <string name="room_name">Room Name</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="power_by">Power by</string>
    <string name="mobile_app_development_ii">Mobile App Development II</string>
    <string name="add">Add</string>
    <string name="join_room">Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="name_in_room">Name in Room (Optional)</string>
    <string name="private_room_code_warning">* This room is private. \n   Please enter the code to join this room.</string>
    <string name="join">Join</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>
    <string name="type_sth">Type something here…</string>
    <string name="datetime">MM/DD/YYYY</string>
    <string name="post">Post</string>
    <string name="edit_students">Edit Students</string>
    <string name="see_details">See Details</string>
    <string name="student_name">Student Name</string>
    <string name="subject">Subject</string>
    <string name="subject_name">Subject Name</string>
    <string name="add_subject">+ Add Subject</string>
    <string name="calculate">Calculate</string>
    <string name="all">All</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="save">Save</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="score">Score</string>
    <string name="new_students">New Students</string>
    <string name="achieve_classroom">Achieve Classroom</string>
    <string name="room_news">News</string>
    <string name="room_attendance">Attendance</string>
    <string name="room_score">Score</string>
    <string name="room_more">More</string>
    <string name="status">Status</string>
    <string name="room_password">Room Password</string>
    <string name="room_password_warning">* This room is private. \n   Please enter the password to join this room.</string>
    <string name="complete">Complete</string>
    <string name="Home">Home</string>
    <string name="noAttendance">No attendance check yet.</string>
    <string name="absent">Absent</string>
    <string name="time">YYYY/MM/DD</string>
    <string name="average_score">Average Score</string>
    <string name="rank">Rank</string>
    <string name="details">Details</string>
    <string name="subject_average_score">Subject Average Score</string>
    <string name="member">Member</string>
    <string name="select_date">Select Date</string>
    <string name="NA">N/A</string>
    <string name="dot">-</string>
    <string name="no_attendance">No attendance found.</string>
    <string name="add_student">+ Add Student</string>
    <string name="add_exam">+ Add Exam</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="cancel">Cancel</string>
    <string name="no_exam">No exam found.</string>
    <string name="no_subject">No subject found.</string>
    <string name="exam">Exam</string>
    <string name="max_score">Max Score : </string>
    <string name="class_tracking">Class Tracking</string>
    <string name="setting">Setting</string>



</resources>