<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_gravity="center"
                android:id="@+id/room_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginStart="10dp"
                android:text=""
                android:id="@+id/room_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/all"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:textSize="14sp"
                style="?attr/materialButtonOutlinedStyle"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_exam"
                android:layout_marginHorizontal="5dp"
                android:textSize="12sp"
                app:cornerRadius="12dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_exam"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/no_exam"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_room"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="10dp"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_add_exam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur_background"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="12dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp">

            <LinearLayout
                android:paddingVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_inverseOnSurface"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/quiz_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ip_quiz_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/score">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ip_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_marginVertical="0dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_cancel_exam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/cancel"
                        android:textSize="14sp"
                        style="?attr/materialButtonOutlinedStyle"
                        app:cornerRadius="12dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save_exam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/save"
                        android:textSize="14sp"
                        style="?attr/materialButtonOutlinedStyle"
                        app:cornerRadius="12dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>


</RelativeLayout>