<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/search" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_room_student"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:backgroundTint="@color/secondary" />


        <Button
            android:id="@+id/btn_room_teacher"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/teacher" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_room"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/secondary"
        app:srcCompat="@drawable/ic_add"
        android:layout_margin="16dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>